# PDFPixel

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  USAGE.md  install.sh  pyproject.toml  requirements-dev.txt  uninstall.sh
.github/workflows/: build.yml
integrations/linux/: pdfpixel.desktop  pdfpixel_caja.py  pdfpixel_menu.py  pdfpixel_nautilus.py  pdfpixel_nemo.py  thunar-actions.md
integrations/macos/PDFPixel-AllPages.workflow/Contents/: Info.plist  document.wflow
integrations/macos/PDFPixel-Compress.workflow/Contents/: Info.plist  document.wflow
integrations/macos/PDFPixel-CustomRange.workflow/Contents/: Info.plist  document.wflow
integrations/macos/PDFPixel-FirstPage.workflow/Contents/: Info.plist  document.wflow
integrations/macos/PDFPixel-Merge.workflow/Contents/: Info.plist  document.wflow
integrations/windows/: pdfpixel.reg.tmpl
packaging/: entry.py  make_sample_pdf.py
packaging/linux/: DISTRIBUTING.md  build_deb.sh  build_in_container.sh  build_linux.sh  gen_servicemenus.py
packaging/linux/aur/: .SRCINFO  PKGBUILD
packaging/linux/flatpak/: io.github.parikhvedant2003.PDFPixel.desktop  io.github.parikhvedant2003.PDFPixel.metainfo.xml  io.github.parikhvedant2003.PDFPixel.yaml
packaging/macos/: Install PDFPixel.command  build_dmg.sh
packaging/windows/: build_exe.ps1  pdfpixel.iss
pdfpixel/: __init__.py  __main__.py  cli.py  core.py  dialog.py  notify.py  pdfops.py
src/: pdfpixel.py  pdfpixel_nautilus.py
tests/: conftest.py  test_cli.py  test_core.py  test_core_format.py  test_menu.py  test_pdfops.py  test_pdfpixel.py
(+2 files in other folders)
