[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfpixel"
version = "0.2.0"
description = "Right-click a PDF -> every page as a PNG. Cross-platform (Linux/Windows/macOS)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "pypdfium2>=4",
    "pillow>=9",
    "winotify>=1.1; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = ["pytest>=7", "fpdf2>=2.7", "pyinstaller>=6"]

[project.scripts]
pdfpixel = "pdfpixel.cli:run"

[tool.setuptools]
packages = ["pdfpixel"]
