[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfpixel"
dynamic = ["version"]
description = "Right-click a PDF -> every page as a PNG. Cross-platform (Linux/Windows/macOS)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "pypdfium2>=4",
    "pillow>=9",
    "pikepdf",
    "winotify>=1.1; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = ["pytest>=7", "fpdf2>=2.7", "pyinstaller>=6"]

[project.scripts]
pdfpixel = "pdfpixel.cli:run"

[tool.setuptools]
packages = ["pdfpixel"]

# Single source of truth for the version: pdfpixel/__init__.py __version__.
# setuptools reads it statically (no import), so no build-time dep needed.
[tool.setuptools.dynamic]
version = { attr = "pdfpixel.__version__" }
